fix img jump

--- a/style.css
+++ b/style.css
@@ -82,6 +82,7 @@ body {
   border-radius: 20px;
   padding-top: 236px;
   padding-left: 32px;
+  border: 3px solid transparent;
 }
 .bottom__item:hover {
   border: 3px solid #44D2FF;
